# whimsy

./: .gitignore  Makefile  Whimsy.pptx  check-self.sh  check.sh  whimsy.cabal  whimsy.html
src/: API.hs  Bench.hs  Main.hs
src/Impl/: IORef1.hs  IORef2.hs  MVar1.hs  MVar2.hs  STM1.hs  TVar1.hs
