name:                whimsy
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable whimsy
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    ghc-options:        -Wall -O2

    build-depends:      base                ==4.*

                    ,   aeson
                    ,   aeson-casing
                    ,   containers
                    ,   either
                    ,   servant
                    ,   servant-server
                    ,   text
                    ,   time
                    ,   transformers
                    ,   unordered-containers
                    ,   warp
