name:                whimsy
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable whimsy
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    ghc-options:        -Wall -O2

    build-depends:      base                ==4.*

                    ,   aeson
                    ,   aeson-casing
                    ,   containers
                    ,   either
                    ,   hashable
                    ,   servant
                    ,   servant-server
                    ,   stm
                    ,   stm-containers
                    ,   text
                    ,   time
                    ,   transformers
                    ,   unordered-containers
                    ,   warp

benchmark whimsy-bench
    type:               exitcode-stdio-1.0
    main-is:            Bench.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    ghc-options:        -Wall -O2

    build-depends:      base                ==4.*

                    ,   aeson
                    ,   aeson-casing
                    ,   containers
                    ,   criterion
                    ,   either
                    ,   hashable
                    ,   servant
                    ,   servant-server
                    ,   stm
                    ,   stm-containers
                    ,   text
                    ,   time
                    ,   transformers
                    ,   unordered-containers
                    ,   warp
